# EmulatRAppUni

./: .gitattributes  .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CPackConfig.cmake  CPackSourceConfig.cmake  Emulatr.sln  Emulatr.vcxproj  Emulatr.vcxproj.filters  Emulatr_tests.vcxproj  Emulatr_tests.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  README.md  SPEC_execution_model.md  SPEC_memory_realms_and_scaffold.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  _tooltest.txt  alpha_isa_audit.xlsx  boot.out  cpp.hint  dec_disk_media_types.tsv  ds10_flash.rom  ds10_platform.json  ds10_platform.win  ds10_v7_3_platform.json  ds20_platform.json  ds20_v7_3_platform.json  ds25_platform.json  ds25_v7_3_platform.json  emulatr_docs.vcxproj  es45_platform.json  es45_v7_3_platform.json  (+2 more)
.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake  deploy_Emulatr_6c3901c387-Debug.cmake  deploy_Emulatr_6c3901c387-MinSizeRel.cmake  deploy_Emulatr_6c3901c387-RelWithDebInfo.cmake  deploy_Emulatr_6c3901c387-Release.cmake
HMDocs/: Documentation_Index.md  V4_Modern_Flexible_Business_Grey_WebHelp.hmskin  Webhelp, Responsive Blue, Keywordslist.hmskin  claudeRV4.hmxp  emulatr_intro_deep_architectural_overview.md  helpproject.xsl
berkeley-softfloat-3-master/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  softfloat.vcxproj  softfloat.vcxproj.filters  softfloat_sources.cmake
cBoxLib/: README.md
chipsetLib/: 20260529_console_path_and_irq_vector_investigation.md  ASA-EMULATR-PRD-004-REV-A.md  AliM1543C.h  CchipIntervalTimer.h  CsrDiag.cpp  CsrDiag.h  Cypress_CY82C693ISABridge.h  FlashRom.cpp  FlashRom.h  IDeviceHandlers.h  Pic8259Pair.h  System-Bus-Specification.txt  Titan21274_CsrSpec.h  TitanChipset.h  TitanPchip.h  Tsunami21272_CsrSpec.h  Tsunami21272_RegisterMap.h  TsunamiCchip.h  TsunamiChipset.cpp  TsunamiChipset.h  TsunamiDchip.h  TsunamiPChip0.h  TsunamiPchip.h  TsunamiTig.h  TsunamiVariant.h  Tsunami_Chipset_Architecture.md  Tsunami_Chipset_Cowork_ActionPlan.md  Tsunami_Chipset_Functional_Test_Plan.txt  chipset_adapter.h
config/: EmulatorSettings.cpp  EmulatorSettings.h  EmulatrV4.ini  EmulatrV4.ini.default  IniLoader.cpp  IniLoader.h  LoggingInit.cpp  LoggingInit.h  dec_disk_media_types.tsv  disk_types.json
coreLib/: Alpha_vector_fp_inl.h  BoxResult.h  CBoxState.h  CpuState.h  DispatchEntry.h  Ev6EntryVectors.h  Ev6Pc264PalDefs.h  ExecCtx.h  FastMemWriter.h  FaultEventLog.cpp  FaultEventLog.h  HW_IPR.h  InstructionGrain.h  IprBank.h  IprFields.h  LogSubsystem.cpp  LogSubsystem.h  LoggingMacros.h  OpcDec.cpp  PalShadow.h  PipelineSlot.h  ProcessorVariant.h  README.md  VA_types.h  alpha_alu_inl.h  alpha_fp_ieee_inl.h  alpha_fpcr_core.h  alpha_int_byteops.h  alpha_int_helpers.h  axp_attributes_core.h  bitutils.h  fp_variant_core.h
cpuLib/: README.md
deviceLib/: BadgeMhzGauge.h  ConsoleManager.cpp  ConsoleManager.h  ControllerConfig.h  FirmwareDeviceManager.h  HwpcbContext.h  Hwrpb.h  HwrpbBuilder.cpp  HwrpbBuilder.h  IConsoleDevice.h  IoSeam.h  OPA_Console_Config.h  SRMConsole.cpp  SRMConsole.h  SRMConsoleDevice.cpp  SRMConsoleDevice.h  SRMEnvStore.cpp  Scb.h  StdoutConsoleBackend.cpp  StdoutConsoleBackend.h  global_ConsoleManager.cpp  global_SRMEnvStore.cpp  global_SRMEnvStore.h  global_firmwaredevicemanager.cpp
docs/: --addressing------------------.html  --addressing--tlb.html  --appendix---ds10.html  --appendix-ds20-_-es40-_-es45.html  --atapi-devices.html  --attributions--credits-------.html  --automatic-_-creating-_-resto.html  --building-from-source.html  --clean-shutdown.html  --cmake-macro-guards----------.html  --common-commands.html  --configuring----------(moved-.html  --connecting-to-the-console.html  --console-connection-issues---.html  --console-support------(moved-.html  --create-guest-disk-storage---.html  --current-development-status--.html  --current-platform-support.html  --decompressor-internals.html  --dependencies----------------.html  --diagnostics--debugging---(ne.html  --dispatchtables.html  --emulatr-will-not-start.html  --env-vars-operation-ref-_-kil.html  --environment-variables-(emula.html  --evaluate-address.html  --example-(console)-execution.html  --example---performance.html  --executing------------(moved).html  --executing-two-instances.html  --execution-_-boot-internals.html  --execution-flight-plan-------.html  --feature-matrix.html  --firmware-decode--decompressi.html  --firmware-hangs-_-slow-boot-_.html  --firmware-requirements.html  --first-startup.html  --floating-point-consideration.html  --ghidra.html  --glossary--------------------.html  (+73 more)
eBoxLib/: README.md
fpBoxLib/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  fpBox.vcxproj  fpBox.vcxproj.filters  fp_backend.h  fp_backend_active.cpp  fp_backend_active.h  fp_backend_host.h  fp_backend_softfloat.cpp  fp_backend_softfloat.h  fp_host_guard.cpp  fp_host_guard.h  vax_float.h
schedLib/: AlphaCpuAgent.cpp  AlphaCpuAgent.h  CMakeLists.txt  MockCpuAgent.h  README.md  SmpDrivers.h  SmpHarness.h
(+463 files in other folders)
